Ensure we are actually loading default.yml 🤦‍♂️ -- related fixes. Including enabling DisabledByDefault

--- a/config/default.yml
+++ b/config/default.yml
@@ -4,5 +4,8 @@ AllCops:
   Exclude: []
   DisabledByDefault: true
 
+Lint/Syntax:
+  Enabled: true
+
 Standard/BlockSingleLineBraces:
   Enabled: true
