Since this is no longer overwriteable, I guess we should write it

--- a/config/default.yml
+++ b/config/default.yml
@@ -3,6 +3,7 @@ AllCops:
   TargetRubyVersion: 2.6
   Exclude: []
   DisabledByDefault: true
+  StyleGuideBaseURL: https://github.com/standardrb/standard
 
 Lint/Syntax:
   Enabled: true
