Test that plugins can be configured and pass that onto cops

--- a/test/fixture/plugins/project/.standard.yml
+++ b/test/fixture/plugins/project/.standard.yml
@@ -1,3 +1,7 @@
 plugins:
   - lib/banana/plugin:
       plugin_class_name: "Banana::Plugin"
+      preferred_banana_replacement:
+        - steak
+        - apples
+        - shenanigans
